--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-      <a-entity mindar-image-target="targetIndex: 0" pause-on-lost>
-		<a-video src="#videoIciar" position="0 0 0.1" width="1" height="2" rotation="0 0 0" material="shader: flat" play-on-click></a-video>	
+      <a-entity mindar-image-target="targetIndex: 0" show-on-found pause-on-lost>
+		<a-video src="#videoIciar" position="0 0 0.1" width="2" height="3" rotation="0 0 0" material="shader: flat" play-on-click></a-video>	
 	  </a-entity>
-	  <a-entity mindar-image-target="targetIndex: 1" pause-on-lost>
-		<a-video src="#videoAmigos" position="0 0 0.1" width="1" height="1" rotation="0 0 0" material="shader: flat" play-on-click></a-video>
+	  <a-entity mindar-image-target="targetIndex: 1" show-on-found pause-on-lost>
+		<a-video src="#videoAmigos" position="0 0 0.1" width="2" height="2" rotation="0 0 0" material="shader: flat" play-on-click></a-video>
 	  </a-entity>
 	  <a-entity mindar-image-target="targetIndex: 2">
 		 <a-gltf-model 
@@ -66,33 +66,40 @@
                const otherVideoEl = video.getAttribute("material").src;
                if (otherVideoEl) {
                  otherVideoEl.pause();
-                 otherVideoEl.currentTime = 0; // Reiniciar al inicio si es necesario
                }
              }
            });
-		   var videoEl = this.el.getAttribute("material").src;
+           var videoEl = this.el.getAttribute("material").src;
            if (!videoEl) {
              return;
            }
-           this.el.object3D.visible = true;
-           videoEl.play();
+			videoEl.play();
          },
        });
-
-		AFRAME.registerComponent("pause-on-lost", {
+		  
+       AFRAME.registerComponent("show-on-found", {
+         init: function () {
+           this.el.addEventListener('targetFound', () => {
+             const video = this.el.querySelector('a-video');
+             if (video) {
+               video.object3D.visible = true;
+             }
+           });
+         }
+       });
+		  
+       AFRAME.registerComponent("pause-on-lost", {
          init: function () {
            this.el.addEventListener('targetLost', () => {
              const video = this.el.querySelector('a-video');
              if (video) {
                const videoEl = video.getAttribute('material').src;
                videoEl.pause();
-               videoEl.currentTime = 0;
                video.object3D.visible = false;
              }
            });
          }
-       });
-	
+       });	
     </script>
   </body>
 </html>
