--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
       <a-entity mytarget mindar-image-target="targetIndex: 0">
-		<a-video id="videoIciar" webkit-playsinline playsinline width="2" height="3" position="0 0 0" rotation="0 0 0"></a-video>
+		<a-video src="#videoIciar" webkit-playsinline playsinline width="2" height="3" position="0 0 0" rotation="0 0 0"></a-video>
 	  </a-entity>
 	  <!--<a-entity mindar-image-target="targetIndex: 1">
 		<a-video id="videoAmigos" webkit-playsinline playsinline position="0 0 0" width="2" height="2" rotation="0 0 0"></a-video>
