--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="near: 10; far: 10000; objects: .clickable"></a-camera>
 
       <a-entity mindar-image-target="targetIndex: 0">
-		<!--<a-video class="clickable" video-handler src="#videoIciar" width="2" height="3" position="0 0 0" rotation="0 0 0"></a-video>-->
-	  	<a-plane
+		<a-video class="clickable" video-handler smooth-position="bufferSize: 5" src="#videoIciar" width="1" height="2" position="0 0 0" rotation="0 0 0"></a-video>
+	  	<!--<a-plane
 			class="clickable"
 			video-handler
 			smooth-position="bufferSize: 5"
@@ -26,7 +26,7 @@
 			position="0 0 0"
 			rotation="0 0 0"
 			>
-		</a-plane>
+		</a-plane>-->
 	  </a-entity>
 	  <!--<a-entity mindar-image-target="targetIndex: 1">
 		<a-video id="videoAmigos" webkit-playsinline playsinline position="0 0 0" width="2" height="2" rotation="0 0 0"></a-video>
