--- a/index.html
+++ b/index.html
@@ -16,20 +16,30 @@
       <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="near: 10; far: 10000; objects: .clickable"></a-camera>
 
       <a-entity mindar-image-target="targetIndex: 0">
-		<a-video class="clickable" video-handler smooth-position="bufferSize: 5" src="#videoIciar" width="2" height="2.5" position="0 0 0" rotation="0 0 0"></a-video>
-	  	<!--<a-plane
+		<!--<a-video class="clickable" video-handler smooth-position="bufferSize: 5" src="#videoIciar" width="2" height="2.5" position="0 0 0" rotation="0 0 0"></a-video>-->
+	  	<a-plane
 			class="clickable"
 			video-handler
 			smooth-position="bufferSize: 5"
 			material="src: #videoIciar"
-			geometry="primitive: plane; width: 1; height: 2;"
+			geometry="primitive: plane; width: 1; height: 2.5;"
 			position="0 0 0"
 			rotation="0 0 0"
 			>
-		</a-plane>-->
+		</a-plane>
 	  </a-entity>
 	  <a-entity mindar-image-target="targetIndex: 1">
-		<a-video class="clickable" video-handler smooth-position="bufferSize: 5" src="#videoAmigos" width="2" height="2.5" position="0 0 0" rotation="0 0 0"></a-video>
+		<!--<a-video class="clickable" video-handler smooth-position="bufferSize: 5" src="#videoAmigos" width="2" height="2.5" position="0 0 0" rotation="0 0 0"></a-video>-->
+		  <a-plane
+			class="clickable"
+			video-handler
+			smooth-position="bufferSize: 5"
+			material="src: #videoAmigos"
+			geometry="primitive: plane; width: 2; height: 2;"
+			position="0 0 0"
+			rotation="0 0 0"
+			>
+		</a-plane>
 	  </a-entity>
 	  <a-entity mindar-image-target="targetIndex: 2">
 		 <a-gltf-model 
@@ -43,8 +53,8 @@
        AFRAME.registerComponent('video-handler', {
 		init: function () {
 			//this.video = document.querySelector("#videoIciar");
-			//this.video = this.el.querySelector('a-video').getAttribute('material').src; a-plane
-			this.videoElement = this.el.components.video.videoEl;
+			this.video = this.el.querySelector('a-plane').getAttribute('material').src;
+			this.videoElement = document.querySelector(this.video);
 			this.videoElement.pause();
 			this.isPlaying = false;
 
