--- a/index.html
+++ b/index.html
@@ -38,17 +38,18 @@
 			});
 			
 			this.el.addEventListener('click', () => {
-			if (this.isPlaying) {
-				this.videoElement.pause();
-				console.log("Video Pausado");
-			} else {
-				this.videoElement.play();
-				console.log("Video Reproduciendo");
-			}
+				if (this.isPlaying) {
+					this.videoElement.pause();
+					console.log("Video Pausado");
+				} else {
+					this.videoElement.play();
+					console.log("Video Reproduciendo");
+				}
 				this.isPlaying = !this.isPlaying;
 			});
-		}
-	  });
+		  }
+	    });
+	 });
     </script>
   <body>
     <a-scene mindar-image="imageTargetSrc: ./targets.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
@@ -61,8 +62,8 @@
       <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="near: 10; far: 10000; objects: .clickable"></a-camera>
 
       <a-entity mindar-image-target="targetIndex: 0">
-		<!--<a-video class="clickable" video-handler smooth-position="bufferSize: 5" src="#videoIciar" width="2" height="2.5" position="0 0 0" rotation="0 0 0"></a-video>-->
-	  	<a-plane
+		<a-video class="clickable" video-handler smooth-position="bufferSize: 5" src="#videoIciar" width="2" height="2.5" position="0 0 0" rotation="0 0 0"></a-video>>
+	  	<!--<a-plane
 			class="clickable"
 			video-handler
 			material="src: #videoIciar"
@@ -70,7 +71,7 @@
 			position="0 0 0"
 			rotation="0 0 0"
 			>
-		</a-plane>
+		</a-plane>--
 	  </a-entity>
 	 <!-- <a-entity mindar-image-target="targetIndex: 1">
 		<!--<a-video class="clickable" video-handler smooth-position="bufferSize: 5" src="#videoAmigos" width="2" height="2.5" position="0 0 0" rotation="0 0 0"></a-video>
