--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <a-camera position="0 0 0" look-controls="enabled: false" cursor="fuse: false; rayOrigin: mouse;" raycaster="near: 10; far: 10000; objects: .clickable"></a-camera>
 
       <a-entity mindar-image-target="targetIndex: 0">
-		<a-video class="clickable" video-handler smooth-position="bufferSize: 5" src="#videoIciar" width="2" height="2.5" position="0 0 0" rotation="0 0 0"></a-video>>
+		<a-video class="clickable" video-handler src="#videoIciar" width="2" height="2.5" position="0 0 0" rotation="0 0 0"></a-video>
 	  	<!--<a-plane
 			class="clickable"
 			video-handler
